--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,11 @@
 
 body {
   background-color: #000;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
